# ferrumyx

./: .env.example  .env.webui.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_NEW.md  Cargo.toml  DEVELOPER_GUIDE.md  Dockerfile.redis  Dockerfile.web  Dockerfile.webui  FINAL_REFACTORING_REPORT.md  PERFORMANCE_TESTING_README.md  PHI_protection_enhancement_report.md  PIPELINE_MIGRATION.md  PRODUCTION_READINESS_REPORT.md  README.md  RELIABILITY_IMPROVEMENTS_REPORT.md  TESTING_INFRASTRUCTURE_REPORT.md  TROUBLESHOOTING.md  USER_GUIDE.md  agent_errors.txt  agent_errors_v2.txt  backup-restore.sh  build_output.txt  compile_err.txt  compile_err2.txt  database.env.template  deep_performance_analyzer.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.webui.yml  docker-compose.yml  ferrumyx-ingestion-errors-v2.txt  ferrumyx-ingestion-errors.txt  ferrumyx-kg-errors-v2.txt  ferrumyx-kg-errors.txt  ferrumyx-security.toml  ferrumyx-web-errors.txt  ferrumyx-workspace-errors.txt  (+23 more)
.kilocode/: mcp.json
crates/ferrumyx-agent/: Cargo.toml  Dockerfile
crates/ferrumyx-agent/src/: channels.rs  container_orchestrator.rs  ironclaw_config.rs  ironclaw_ingestion.rs  llm_routing.rs  main.rs
crates/ferrumyx-agent/src/config/: mod.rs  tests.rs
crates/ferrumyx-agent/src/tools/: autonomous_cycle_tool.rs  bio_tools.rs  embedding_backfill_tool.rs  embedding_runtime.rs  ingestion_tool.rs  kg_tool.rs  lab_autoresearch_tool.rs  lab_planner_tool.rs  lab_retriever_tool.rs  lab_run_status_tool.rs  lab_state.rs  lab_validator_tool.rs  llm_audit_tool.rs  mod.rs  molecule_tool.rs  molecules_tool.rs  ner_tool.rs  provider_refresh_tool.rs  pubmed_search_tool.rs  query_tool.rs  ranker_tool.rs  runtime_profile.rs  scoring_tool.rs  system_command_tool.rs  workflow_status_tool.rs
crates/ferrumyx-common/: Cargo.toml
crates/ferrumyx-common/src/: confidence.rs  entities.rs  error.rs  federation.rs  lib.rs  memory.rs  query.rs  sandbox.rs  target_config.rs
crates/ferrumyx-config/: Cargo.toml  README.md
crates/ferrumyx-config/examples/: integration.rs
crates/ferrumyx-config/src/: channels.rs  database.rs  lib.rs  llm.rs  loader.rs  migration.rs  monitoring.rs  performance.rs  security.rs  validation.rs  watcher.rs
crates/ferrumyx-db/: Cargo.toml
crates/ferrumyx-db/src/: chunks.rs  database.rs  ent_stage.rs  entities.rs  entity_mentions.rs  error.rs  federation.rs  generate_arrow.py  generate_db.py  kg_conflicts.rs  kg_facts.rs  lib.rs  papers.rs  phase4_signals.rs  schema.rs  schema_arrow.rs  target_scores.rs  workspace_memory.rs
crates/ferrumyx-depmap/: Cargo.toml
crates/ferrumyx-depmap/src/: lib.rs
crates/ferrumyx-embed/: Cargo.toml
crates/ferrumyx-embed/examples/: test_embed.rs
crates/ferrumyx-embed/src/: batch.rs  config.rs  embedder.rs  lib.rs  pooling.rs
crates/ferrumyx-ingestion/: Cargo.toml  Dockerfile
crates/ferrumyx-ingestion/src/: chunker.rs  dedup.rs  docling.rs  embedding.rs  ironclaw_integration.rs  lib.rs  models.rs  pdf_parser.rs  pg_repository.rs  pipeline.rs  repository.rs
crates/ferrumyx-ingestion/src/embed/: batch.rs  config.rs  embedder.rs  error.rs  mod.rs  pooling.rs
crates/ferrumyx-ingestion/src/normalise/: hgnc.rs  hgvs.rs  mod.rs
crates/ferrumyx-ingestion/src/sources/: arxiv.rs  biorxiv.rs  cbioportal.rs  chembl.rs  clinicaltrials.rs  cosmic.rs  crossref.rs  depmap.rs  depmap_cache.rs  europepmc.rs  gtex.rs  mod.rs  prelude.rs  pubmed.rs  scihub.rs  semanticscholar.rs  tcga.rs  unpaywall.rs
crates/ferrumyx-ingestion/tests/: test_db_connection.rs  test_ingestion_e2e.rs  test_pubmed_ingestion.rs
crates/ferrumyx-kg/: Cargo.toml  Dockerfile
crates/ferrumyx-kg/src/: conflict.rs  extraction.rs  lib.rs  pg_repository.rs  repository.rs  scoring.rs  update.rs
crates/ferrumyx-kg/src/ner/: builtin_lexicons.rs  cancer_normaliser.rs  entity_aggregator.rs  entity_db.rs  entity_loader.rs  entity_types.rs  hgnc.rs  hgvs.rs  mod.rs  trie_ner.rs
crates/ferrumyx-llm/: Cargo.toml
crates/ferrumyx-llm/src/: audit.rs  backend.rs  classification.rs  lib.rs  router.rs
crates/ferrumyx-molecules/: Cargo.toml  Dockerfile
crates/ferrumyx-molecules/src/: admet.rs  docking.rs  lib.rs  ligand.rs  pdb.rs  pipeline.rs  pocket.rs  scoring.rs
crates/ferrumyx-monitoring/: Cargo.toml
crates/ferrumyx-monitoring/src/: cache.rs  health.rs  lib.rs  metrics.rs  profiling.rs  resources.rs
crates/ferrumyx-ner/: Cargo.toml  README.md
crates/ferrumyx-ner/examples/: benchmark_ner.rs  egfr_nsclc_pipeline.rs  full_paper_pipeline.rs  inspect_model.rs  inspect_tensors.rs  list_tensors.rs  test_genomic_oncology.rs  test_ner.rs  test_pipeline.rs
crates/ferrumyx-ner/src/: benchmark.rs  entity_aggregator.rs  entity_db.rs  entity_loader.rs  entity_types.rs  fast_ner.rs  lib.rs  model_pool.rs  ner_model.rs  ner_optimizer.rs  pipeline.rs  pipeline_test.rs  trie_ner.rs
crates/ferrumyx-ranker/: Cargo.toml  Dockerfile
crates/ferrumyx-ranker/src/: depmap_provider.rs  gtex_provider.rs  lib.rs  normalise.rs  scorer.rs  tcga_provider.rs  weights.rs
crates/ferrumyx-ranker/src/providers/: depmap.rs  mod.rs
crates/ferrumyx-runtime/: Cargo.toml
crates/ferrumyx-runtime-core/tools-src/fastqc/: Cargo.toml  fastqc-tool.capabilities.json
crates/ferrumyx-runtime/src/: context.rs  lib.rs  llm.rs  tools.rs
crates/ferrumyx-security/: Cargo.toml
crates/ferrumyx-security/src/: audit.rs  compliance.rs  correlation_engine.rs  dashboard.rs  encryption.rs  incident_response.rs  lib.rs  monitoring.rs  phi.rs  reporting.rs  runtime_monitoring.rs  scanner.rs  tests.rs  threat_detection.rs
crates/ferrumyx-test-utils/: Cargo.toml
crates/ferrumyx-test-utils/src/: assertions.rs  chaos.rs  fixtures.rs  integration.rs  lib.rs  mocks.rs  performance.rs
crates/ferrumyx-web/: Cargo.toml  Dockerfile
crates/ferrumyx-web/src/: lib.rs  main.rs  router.rs  sse.rs  state.rs
crates/ferrumyx-web/templates/: chat.html  nav.html
ferrumyx-setup/: Cargo.toml  README.md
ferrumyx-setup/src/: backup.rs  config.rs  infrastructure.rs  main.rs  security.rs  validate.rs  wizard.rs
(+928 files in other folders)
