[workspace]
resolver = "2"
members = [
    "crates/ferrumyx-agent",
    "crates/ferrumyx-ingestion",
    "crates/ferrumyx-kg",
    "crates/ferrumyx-ranker",
    "crates/ferrumyx-llm",
    "crates/ferrumyx-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mika Nieuwenhuyzen"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Classacre/ferrumyx"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
async-trait = "0.1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sqlx        = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
pgvector    = { version = "0.4", features = ["sqlx"] }
quick-xml   = { version = "0.37", features = ["serialize"] }
sha2        = "0.10"