[workspace]
resolver = "2"
members = [
    "crates/ferrumyx-agent",
    "crates/ferrumyx-ingestion",
    "crates/ferrumyx-kg",
    "crates/ferrumyx-ranker",
    "crates/ferrumyx-llm",
    "crates/ferrumyx-common",
    "crates/ferrumyx-web",
    "crates/ferrumyx-embed",
    "crates/ferrumyx-ner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mika Nieuwenhuyzen"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Classacre/ferrumyx"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
thiserror   = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
async-trait = "0.1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
sqlx        = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
pgvector    = { version = "0.4", features = ["sqlx"] }
quick-xml   = { version = "0.37", features = ["serialize"] }
sha2        = "0.10"
toml        = "0.8"
axum        = { version = "0.8", features = ["ws", "macros"] }
axum-extra  = { version = "0.10", features = ["typed-header"] }
tower       = { version = "0.5", features = ["full"] }
tower-http  = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
minijinja   = { version = "2", features = ["loader"] }
futures-util = "0.3"
lopdf       = "0.34"

# Candle ML framework
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.21"