[package]
name = "ferrumyx-setup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# CLI framework
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["password", "fuzzy-select"] }
console = "0.15"
indicatif = "0.17"

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Security
secrecy.workspace = true
rpassword = "7.3"
argon2 = "0.5"
hex = "0.4"
base64 = "0.22"

# Random generation
rand = "0.8"

# File operations
fs_extra = "1.3"

# HTTP client for validation
reqwest.workspace = true

# URL validation
url = "2.5"

# TOML parsing
toml.workspace = true

# Time handling
chrono.workspace = true

# Ferrumyx config
ferrumyx-config = { path = "../crates/ferrumyx-config" }

[dev-dependencies]
tokio-test.workspace = true