[package]
name = "ferrumyx-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ferrumyx-agent"
path = "src/main.rs"

[dependencies]
ferrumyx-common     = { path = "../ferrumyx-common" }
ferrumyx-ingestion  = { path = "../ferrumyx-ingestion" }
ferrumyx-kg = { path = "../ferrumyx-kg" }
ferrumyx-ranker = { path = "../ferrumyx-ranker" }
ferrumyx-molecules = { path = "../ferrumyx-molecules" }
ferrumyx-web        = { path = "../ferrumyx-web" }
ferrumyx-runtime = { path = "../ferrumyx-runtime" }
rig-core            = "0.30"
axum                = { version = "0.8", features = ["ws", "macros"] }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml            = { version = "0.8" }
async-trait     = "0.1"
reqwest         = { version = "0.12", features = ["json"] }
ferrumyx-db = { version = "0.1.0", path = "../ferrumyx-db" }
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
sysinfo = "0.33"
