[package]
name = "ferrumyx-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
sqlx.workspace = true
reqwest.workspace = true
