[package]
name = "ferrumyx-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }

# PostgreSQL with pgvector
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
pgvector = { version = "0.4", features = ["postgres"] }

# Async runtime
tokio.workspace = true
futures = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# UUID for IDs
uuid.workspace = true

# Time
chrono.workspace = true

[dev-dependencies]
tokio-test = "0.4"
