[package]
name = "ferrumyx-depmap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
csv = "1"
dirs = "5"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
