[package]
name = "ferrumyx-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BiomedBERT embeddings via Candle - pure Rust, no Python"

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Candle ML framework (Hugging Face) - use latest stable
candle-core = "0.9"
candle-transformers = "0.9"
candle-nn = "0.9"

# Hugging Face model hub - use older stable version
hf-hub = "0.4"

# Fast tokenizers
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }

# Async utilities
futures-util = "0.3"

# Optional: caching
lru = "0.12"

[features]
default = ["cpu"]
cpu = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]

[dev-dependencies]
tokio-test = "0.4"
