[package]
name = "ferrumyx-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }
ferrumyx-embed = { path = "../ferrumyx-embed", optional = true }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
quick-xml.workspace = true
sqlx.workspace = true
pgvector.workspace = true
regex       = "1"
lazy_static = "1"
# PDF parsing with Ferrules (fast Rust-native)
ferrules    = { git = "https://github.com/aminediro/ferrules", branch = "main" }

[features]
default = ["rust-embed"]
rust-embed = ["dep:ferrumyx-embed"]
python-embed = []  # Fallback to Docker BiomedBERT service
