[package]
name = "ferrumyx-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }
ferrumyx-db = { path = "../ferrumyx-db" }
ferrumyx-embed = { path = "../ferrumyx-embed", optional = true }
ferrumyx-ner = { path = "../ferrumyx-ner" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
quick-xml.workspace = true
regex       = "1"
lazy_static = "1"
lopdf.workspace = true
tempfile    = "3"
scraper = "0.25.0"
url = "2.5.8"
strsim = "0.11.1"

[features]
default = ["rust-embed"]
rust-embed = ["dep:ferrumyx-embed"]
python-embed = []  # Fallback to Docker BiomedBERT service
