[package]
name = "ferrumyx-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }
ferrumyx-db = { path = "../ferrumyx-db" }
ferrumyx-kg = { path = "../ferrumyx-kg" }
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
fastembed = { version = "5.13.0", optional = true, default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }
lru = "0.13"
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
quick-xml.workspace = true
regex       = "1"
lazy_static = "1"
lopdf.workspace = true
tempfile    = "3"
scraper = "0.25.0"
url = "2.5.8"
strsim = "0.11.1"
sha2.workspace = true
futures = "0.3"

[features]
default = []
rust-embed = []
python-embed = []  # Native BiomedBERT via Candle is default
fastembed_backend = ["dep:fastembed"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
