[package]
name = "ferrumyx-kg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }
ferrumyx-db = { path = "../ferrumyx-db" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
regex = "1"
ahash = "0.8"
aho-corasick = "1"
dirs = "5"
memmap2 = "0.9"
rayon = "1.10"
quick-xml = "0.36"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
lancedb = "0.26.2"
arrow-array = "=57.3.0"
futures = "0.3.32"
arrow-schema = "=57.3.0"
