[package]
name = "ferrumyx-molecules"
version = "0.1.0"
edition = "2021"
description = "Structural analysis and molecule design pipeline for Ferrumyx"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }


 [dev-dependencies]
 tempfile = "3.26.0"
 ferrumyx-test-utils = { path = "../ferrumyx-test-utils" }
