[package]
name = "ferrumyx-ner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dirs = "5"
memmap2 = "0.9"
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
ahash = "0.8"
regex = "1"
sysinfo = "0.30"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
fast-ner = []  # Deprecated, kept for compatibility
auto-optimize = []  # Enable hardware auto-detection and optimization

[[example]]
name = "benchmark_ner"
path = "examples/benchmark_ner.rs"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
