[package]
name = "ferrumyx-ner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dirs = "5"
memmap2 = "0.9"
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ahash = "0.8"
regex = "1"
aho-corasick = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
quick-xml = "0.36"
uuid = { version = "1", features = ["v4"] }
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon"]

[[example]]
name = "egfr_nsclc_pipeline"
path = "examples/egfr_nsclc_pipeline.rs"

[[example]]
name = "full_paper_pipeline"
path = "examples/full_paper_pipeline.rs"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
ferrumyx-ingestion = { path = "../ferrumyx-ingestion" }
