[package]
name = "ferrumyx-ranker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }
ferrumyx-depmap = { path = "../ferrumyx-depmap" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
