[package]
name = "ferrumyx-ranker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx-common = { path = "../ferrumyx-common" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
csv = "1"
dirs = "5"
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
ferrumyx-ingestion = { version = "0.1.0", path = "../ferrumyx-ingestion" }
ferrumyx-db = { version = "0.1.0", path = "../ferrumyx-db" }
