[package]
name = "ferrumyx-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrumyx_runtime_core = { package = "ferrumyx-runtime-core", path = "../ferrumyx-runtime-core", default-features = false }
async-trait = "0.1"
rig-core = "0.30"
rust_decimal = "1"
serde_json = "1"
thiserror = "2"

