[package]
name = "ferrumyx-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]


# Security and cryptography
aes-gcm = "0.10"
argon2 = "0.5"
ring = "0.17"




# Compliance monitoring
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true

tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json"] }

# HTTP client for API checks


# File system operations


# Regular expressions for PHI detection
regex = "1"

# Additional dependencies for security

rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Metrics


# Async utilities


[dev-dependencies]
tempfile = "3"