[package]
name = "ferrumyx-test-utils"
version = "0.1.0"
edition = "2021"
description = "Shared testing utilities for Ferrumyx workspace"
authors = ["Ferrumyx"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
pretty_assertions = "1"
regex = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Workspace dependencies for testing


[features]
postgres = []
libsql = []