[package]
name = "fastqc-tool"
version = "0.2.0"
edition = "2021"
description = "FastQC quality control tool for Ferrumyx Runtime Core (WASM component)"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "=0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.10"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]